@@ -1,3 +1,7 @@
+2008-04-5  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/gtkui/chessview.py: Abort 3D render if widget_get_gl_context() returns None (Bug #512068)
+
 2008-03-24  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/scene/opengl: Handle GLError->GLerror, GLUError -> GLUerror objects being renamed
